Fixed comparison bug: previously checked for identify instead of equality. Added CVL Id field to show if CVLs are different.

--- a/src/ui/partials/diffRow.html
+++ b/src/ui/partials/diffRow.html
@@ -1,4 +1,4 @@
-<div class="ui grid property" ng-class="{changed:status}">
+<div class="ui grid property" ng-class="{changed:status}" ng-show="currentValue + previousValue">
   <div class="six wide column">
     {{previousValue}}
   </div>
